--- a/arkimedeezMod.csproj
+++ b/arkimedeezMod.csproj
@@ -20,4 +20,7 @@
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Localization\es-ES\" />
+  </ItemGroup>
 </Project>
